# pygrad

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sand.py  sandbox.py  setup.py
AModule/: AModule.py  test_engine.py
ATensor/: ATensor.py
api/: index.html
autodiff/: __init__.py  backward_function.py  gradient.py  tape.py  variable.py
docs/: api.md
examples/: example.py
pygrad/: __init__.py  engine.py  graphcache.py  nn.py
pygrad_obsolete/: __init__.py
scripts/: sand.py  sandbox.py
search/: search_index.json
src/: __init__.py
src/autodiff/: backward_function.py  tape.py  variable.py
src/network/: __init__.py  network.py
tests/: __init__.py  conftest.py  test_engine.py  test_gradient.py  test_network.py  test_nn.py
